@@ -1,3 +1,17 @@
+/*
+ * $Header$
+ * $Revision$
+ * $Date$
+ * ------------------------------------------------------------------------------------------------------
+ *
+ * Copyright (c) SymphonySoft Limited. All rights reserved.
+ * http://www.symphonysoft.com
+ *
+ * The software in this package is published under the terms of the BSD
+ * style license a copy of which has been included with this distribution in
+ * the LICENSE.txt file.
+ *
+ */
 package org.mule.extras.oracle.jms;
 
 import java.util.Enumeration;
@@ -28,8 +42,7 @@ public class OracleJmsConnectorTestCase extends AbstractConnectorTestCase {
 
 			Mock connectionFactory = new Mock(ConnectionFactory.class);
 			Mock connection = new Mock(Connection.class);
-			connectionFactory.expectAndReturn("createConnection",
-					(Connection) connection.proxy());
+			connectionFactory.expectAndReturn("createConnection", connection.proxy());
 			connection.expect("close");
 			connection.expect("start");
 			connection.expect("stop");
@@ -55,13 +68,13 @@ public class OracleJmsConnectorTestCase extends AbstractConnectorTestCase {
 		message.expectAndReturn("getText", "Test JMS Message");
 		message.expectAndReturn("getJMSCorrelationID", null);
 		message.expectAndReturn("getJMSMessageID", "1234567890");
-		message.expectAndReturn("getJMSDeliveryMode", new Integer(1));
+		message.expectAndReturn("getJMSDeliveryMode", Integer.valueOf(1));
 		message.expectAndReturn("getJMSDestination", null);
-		message.expectAndReturn("getJMSPriority", new Integer(4));
-		message.expectAndReturn("getJMSRedelivered", new Boolean(false));
+		message.expectAndReturn("getJMSPriority", Integer.valueOf(4));
+		message.expectAndReturn("getJMSRedelivered", Boolean.FALSE);
 		message.expectAndReturn("getJMSReplyTo", null);
-		message.expectAndReturn("getJMSExpiration", new Long(0));
-		message.expectAndReturn("getJMSTimestamp", new Long(0));
+		message.expectAndReturn("getJMSExpiration", Long.valueOf(0));
+		message.expectAndReturn("getJMSTimestamp", Long.valueOf(0));
 		message.expectAndReturn("getJMSType", null);
 		message.expectAndReturn("getPropertyNames", new Enumeration() {
 
