@@ -60,7 +60,7 @@ public abstract class StreamConnector extends AbstractServiceEnabledConnector
     public UMOMessageReceiver createReceiver(UMOComponent component, UMOEndpoint endpoint) throws Exception
     {
         return serviceDescriptor.createMessageReceiver(this, component, endpoint, new Object[] { getInputStream(),
-                new Long(1000) });
+                Long.valueOf(1000) });
     }
 
     /*
